--- a/content/post/2020-09-11-compromise-between-the-electoral-college-and-a-national-popular-vote.Rmd
+++ b/content/post/2020-09-11-compromise-between-the-electoral-college-and-a-national-popular-vote.Rmd
@@ -15,28 +15,28 @@ output:
     toc: no
 ---
 
-*In this post I will discuss using a popular vote weighted by the electoral college of each state as a method to elect the president of the United States. This approach would empower voters by expanding political influence outside of the ‘battleground states.’ It would also preserve the existing biases inherent in the electoral college (thereby minimizing the impact on election outcomes, making such a system more legislatively palatable across party affiliations).*
+*In this post I will discuss using an electoral college weighted popular vote as a method to elect the president. This approach would empower voters by expanding political influence outside of ‘battleground states.’ It would also preserve the existing biases inherent in the American electoral college (thereby making such a system legislatively palatable across party affiliations).*
 
-Irrespective of political party or dispositions towards pure democracy, the winner-take-all approach (currently applied by most US states to allocate their votes for the president) has clear drawbacks. These include:
+Irrespective of political party or disposition towards direct democracy, the winner-take-all approach (currently applied by most US states to allocate their electoral votes for the president) has clear drawbacks. These include:
 
 * incentivizes only campaigning in battleground states
-* greater variability in outcome compared to alternatives^[A few thousand votes in a few places have a greater chance of swaying entire elections in our current system compared to alternatives.]
+* greater variability in outcomes compared to alternatives^[A few thousand votes in a few places have a greater chance of swaying entire elections in our current system compared to alternatives.]
 * incentivizes promoting policies that benefit battleground states over the interests of ‘all Americans’
 * promotes a feeling among the electorate that their vote is unlikely to influence the election
 
-The idea of changing the presidential election from being based on winner-take-all votes among states to one based on the national popular vote has gained traction in the last several years. The compact promoted by the [National Popular Vote](https://www.nationalpopularvote.com/) initiative has passed in states representing 196 of the 270 electoral votes needed for it to have legal force.  The videos on the National Popular Vote initiative website outline the disadvantages of the winner-take-all approach used by most states and provide arguments for employing a national popular vote. The site also provides evidence for the constitutionality of a national popular vote (debunking straw-man arguments against it) and counters ‘myths’^[‘myths,’ is the terminology used on their website] that a popular vote would overly advantage or disadvantage certain states.
+In the last four years, the movement to change the election of the president to a national popular vote has gained traction. A compact between states to vote for the national popular vote winner has been passed in states representing 196 of the 270 electoral votes needed for the agreement to have legal force. The website promoting the [National Popular Vote](https://www.nationalpopularvote.com/) initiative outlines the disadvantages of the winner-take-all approach used by most states and provides arguments for employing a national popular vote. The site also provides evidence for the constitutionality of a national popular vote (debunking straw-man arguments against it) and counters ‘myths’^[‘myths,’ is the terminology used on their website] that a popular vote would overly advantage or disadvantage certain states.
 
-A major challenge in transitioning to a popular vote however is that, at any given time, the electoral college may favor^[or may be perceived to favor] a political party. Hence it is against the advantaged party’s interests^[at least their interests in winning the presidential election] to support a change to the election process. Likewise, the disadvantaged party has an incentive to support a change in the election process^[It’s not a coincidence that the popular vote initiative is currently supported primarily be Democrats.]. Therefore a cynic could argue that getting the requisite number of states to pass the National Popular Vote is almost synonymous with winning the election. Furthermore, legislation for national popular vote could be politically fragile (and, even if passed, may be at risk of frequent challenge depending on the state-level administration in power).
+A major challenge in transitioning to a popular vote however is that (for any given election) the electoral college may favor a political party. Hence it would be against the advantaged party’s interests^[at least their interests in winning the presidential election] to support a change to the election process. Likewise, the disadvantaged party has an incentive to support a change in the election process^[It’s not a coincidence that the popular vote initiative is currently supported primarily be Democrats.]. Therefore a cynic could argue that getting the requisite number of states to pass the National Popular Vote is almost synonymous with winning the election. Furthermore, legislation for a national popular vote that did pass could be politically fragile (and may be at risk of frequent challenge depending on the state-level political party in power).
 
-The goal of the National Popular Vote initiative is to *make every vote matter equally*. However if we weaken this goal to be: *make the importance of votes more equal,* ^[by spreading political influence away from battleground states – problem discussed [here](https://www.nationalpopularvote.com/written-explanation)] it is easier to change the electoral system in a way that would have a more neutral impact on election outcomes (compared to the current state). 
+The goal of the National Popular Vote initiative is to *make every vote matter equally*. However if we weaken this goal to be: *make the importance of votes more equal than they currently are,* ^[by spreading political influence away from the dozen or so battleground states] it becomes easier to change the electoral system in a way that may be likely to agitate partisans. 
 
-I present using *a popular vote weighted by the electoral college*. This approach is equivalent to having the allocation of electoral votes in each state be based on the popular vote within that state. For example, if a state has 30 electoral votes, and 55% of those go to the Republican and 45% to the Democrat, the Republican would receive 16.5 votes and the Democrat 13.5^[“Proportional (fractional) allocation of electoral votes by state” (in the form described in this post) is the same as “popular vote weighted by electoral college”. Throughout this post however I will use the latter terminology.].
+I propose using *a popular vote weighted by the electoral college*. This approach is equivalent to having the allocation of electoral votes in each state be based on the popular vote within that state. For example, if a state has 30 electoral votes, and 55% of those go to the Republican and 45% to the Democrat, the Republican would receive 16.5 votes and the Democrat 13.5^[“Proportional (fractional) allocation of electoral votes by state” (in the form described in this post) is the same as “popular vote weighted by electoral college”. Throughout this post however I will use the latter terminology.].
 
-This approach would empower small states whose votes would be essentially worth double that of larger states^[https://theconversation.com/whose-votes-count-the-least-in-the-electoral-college-74280]. While this may seem horribly unfair, it only makes the existing biases in the electoral college more transparent. Also, it still represents a major improvement in ‘representativeness’ over the current system where only a ~quarter of the population’s votes make any *real* difference in the outcome of the presidential election (specifically those votes in battleground states^[“Influence here is evidenced by campaign events and ad spending among candidates as described [here](https://www.nationalpopularvote.com/written-explanation).]). 
+This approach would empower small states whose voters ballots would be essentially worth double that of large states^[https://theconversation.com/whose-votes-count-the-least-in-the-electoral-college-74280]. While this may seem horribly unfair, it only makes the existing biases in the electoral college more transparent. Also, it still represents a major improvement in representativeness over the existing system where only a ~quarter of the population’s votes make any *real* difference in the outcome of the presidential election (specifically those votes in battleground states^[“Influence here is evidenced by campaign events and ad spending among candidates as described [here](https://www.nationalpopularvote.com/written-explanation).]). 
 
-Any advantage a particular party has in the current electoral college would (in part) be preserved by a popular vote weighted by the electoral college. This would make associated legislation potentially more palatable and enduring across changes in control between political parties within a state (compared to legislation for a raw popular vote). The weighted popular vote also maintains the essence of the existing electoral college^[I.e. it still spreads out by states and not just across the population]  -- it just replaces winner-take-all allocation for fractional allocation of votes among states (a less significant departure compared to switching to a purely popular vote).
+Any advantage a party has in the current electoral college would (in part) be preserved by a popular vote that was weighted by the electoral college. This would make associated legislation potentially more palatable and enduring across changes in control between political parties within a state (compared to legislation for a raw popular vote). The weighted popular vote also maintains the essence of the existing electoral college^[I.e. it still spreads out votes by states and not just across the population]  -- it just replaces 'winner-take-all' with 'proportional' allocation of a state's electoral votes (a less glaring departure compared to adopting a purely national popular vote).
 
-Since 1976 there have been two elections where the popular vote and electoral college did not agree. The weighted popular vote would have disagreed with the raw popular vote once (in the 2000 election) and with the winner-take-all electoral college once (in 2016)^[In 2016 Clinton would have had a ~1 percentage point advantage over Trump in the weighted popular vote (compared to the ~2 percentage point advantage she had in the raw popular vote). Under the weighted popular vote George W. Bush would still have still won the election in 2000, despite losing the raw popular vote.]. See my github repo (LINK PENDING) for details on calculating the weighted popular vote.
+Since 1976 there have been two elections where the popular vote and the electoral college did not agree. The weighted national popular vote would have disagreed with the raw national popular vote once (in the 2000 election) and with the winner-take-all electoral college once (in 2016)^[In 2016 Clinton would have had a ~1 percentage point advantage over Trump in the weighted popular vote (compared to the ~2 percentage point advantage she had in the raw popular vote). Under the weighted popular vote George W. Bush would still have still won the election in 2000, despite losing the raw popular vote.]. See my github repo (LINK PENDING) for details on calculating the national weighted popular vote.
 
 # How to get it passed?
 
@@ -44,19 +44,17 @@ The beginning of the video “Myths About Constitutionality” explains how we g
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/ubIeQ-uO_b0?start=92" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-Essentially it was a collective action problem whereby states (controlled by one party or another) adopted a ‘winner-take-all’ approach as a means to maximize their influence and give the most advantage they could to their preferred candidate. Once a few states adopted the ‘winner take all’ system it created a domino effect whereby all states adopted it^[The result of every state adopting it however led to influence shifting primarily to battleground states.]. 
+Essentially it was a [collective action problem](https://en.wikipedia.org/wiki/Collective_action_problem#:~:text=A%20collective%20action%20problem%20or,individuals%20that%20discourage%20joint%20action.) whereby states (controlled by one party or another) adopted a ‘winner-take-all’ approach as a means to maximize their influence and give the most advantage they could to their preferred candidate. Once a few states adopted the ‘winner-take-all’ system it created a domino effect whereby all states adopted it^[The result of every state adopting it however led to influence shifting primarily to battleground states.]. 
 
 Ways of getting around this collective action problem:
 
-*	The approach the National Popular Vote initiative has used is to have individual states pass laws that only go into effect once the requisite threshold of electoral votes is reached – thereby not disadvantaging any individual state to ‘give-up’ some of their influence prematurely. The same approach could be taken to push a weighted popular vote. I.e. only when the law has been passed in states representing 270 electoral votes would states agree to vote for the winner of the electoral college weighted popular vote.
-*	Another approach would be a more piecemeal method whereby states of similar size and balanced political representation agreed to pass proportional voting laws simultaneously – thereby not damaging the interests of their preferred presidential candidate (but still empowering the voters within their state)^[E.g. say a ten vote state that tends to go 60% democratic teams up with another ten vote state that tends to go 60% republican and each pass a proportional voting system simultaneously. Doing such would balance-out each state’s respective influence on the overall election]. Such an approach would be more effective if fractional votes among electors is allowed^[Interesting article on fractional representatives by George Szpiro: http://www.hnn.us/articles/129114.html .].
+*	The approach the National Popular Vote initiative has used is to have individual states pass laws that only go into effect once the requisite threshold of electoral votes is reached – thereby not disadvantaging any individual state to ‘give-up’ some of their influence prematurely. The same approach could be taken to push adoption of an electoral college weighted national popular vote. I.e. the law would only go into effect when states representing 270 electoral votes passed legislation.
+*	Another approach could be more piecemeal. For example states of similar size and counterbalanced political leanings agree to pass proportional voting laws simultaneously – thereby not damaging the interests of their preferred presidential candidate (but still empowering the voters within their state)^[E.g. say a ten vote state that tends to go 60% democratic teams up with another ten vote state that tends to go 60% republican and each pass a proportional voting system simultaneously.]. Such an approach would be more effective if fractional votes among electors is allowed^[Interesting article on fractional representatives: http://www.hnn.us/articles/129114.html .].
 *	A third approach would be an amendment to the US constitution.
 
 # Closing note
 
-IN PROGRESS!!
-
-The advantage of changing our presidential election is not in seeking to influence the outcome, but in seeking to influence a candidate to campaign to more of the nation^[As described [here]( https://www.nationalpopularvote.com/written-explanation))] and to provide proper incentives for the candidate to promote policies that appeal to a broader and more representative subset of the American public. A popular vote weighted by the electoral college improves this aim and has certain…
+The chief advantage of a national popular vote for presidential elections is not that it achieves *perfect* representation but that it provides *improved incentives* for presidential candidates. Specifically it promotes campaigns and policy proposals that give attention to a broader subset of the American public^[As described [here]( https://www.nationalpopularvote.com/written-explanation)).] and reduces the variability in election results. However a national popular vote inevitably faces partisan challenges and may give-off the appearance of too momentous a departure from the norms of the existing electoral college. As a compromise between these systems, a national popular vote weighted by the electoral college avoids many of the challenges to a national popular vote while achieving its most important aims. It deserves consideration. 
 
 # Appendix
 
